scripts for new splits and collections

--- a/src/app/create_qa_pairs.ipynb
+++ b/src/app/create_qa_pairs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,6 @@
     "        \"prompt\": prompt,\n",
     "        # \"min_new_tokens\": 0,\n",
     "        \"max_new_tokens\": 1024,\n",
-    "        # \"temperature\": 0.7, # default\n",
     "    }\n",
     "    iterator = replicateSession.run(\n",
     "        \"meta/meta-llama-3-70b-instruct\", # \"meta/llama-2-70b-chat\", # \"meta/meta-llama-3-8b\",  # \"mistralai/mixtral-8x7b-instruct-v0.1\",\n",
@@ -101,108 +100,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_qa_pairs(split_folder: str):\n",
     "    file_names = os.listdir(SPLITS_PATH + split_folder)\n",
-    "    with open(\"../resources/TestFragen/log.txt\", \"w\", encoding='utf-8') as f:\n",
-    "        for file in file_names:\n",
-    "            print(\"creating q_and_a for file \" + file)\n",
-    "            qa_df = pd.DataFrame(columns=[\"question\", \"answer\"])\n",
-    "            file_path = SPLITS_PATH + split_folder + file\n",
-    "            df = pd.read_json(file_path)\n",
+    "# with open(\"../resources/TestFragen/log.txt\", \"w\", encoding='utf-8') as f:\n",
+    "    for file in file_names:\n",
+    "        if not file.startswith(\"KWG\"):\n",
+    "            continue\n",
+    "        print(\"creating q_and_a for file \" + file)\n",
+    "        qa_df = pd.DataFrame(columns=[\"question\", \"answer\"])\n",
+    "        file_path = SPLITS_PATH + split_folder + file\n",
+    "        df = pd.read_json(file_path)\n",
     "\n",
-    "            documents_ = df['splits'].to_list()\n",
-    "            if len(documents_) == 0:\n",
-    "                print(\"No splits in file \" + file_path + \". Skipping file.\")\n",
-    "                break\n",
+    "        documents_ = df['splits'].to_list()\n",
+    "        if len(documents_) == 0:\n",
+    "            print(\"No splits in file \" + file_path + \". Skipping file.\")\n",
+    "            break\n",
     "\n",
-    "            for split in tqdm(documents_):\n",
-    "                question = do_q_call(split)\n",
-    "                answer = do_a_call(question, split)\n",
-    "                \n",
-    "                f.write(\"-------------------\\n\")\n",
-    "                f.write(question + \"\\n\")\n",
-    "                f. write(\"---\\n\")\n",
-    "                f.write(answer + \"\\n\")\n",
-    "                f.write(\"-------------------\\n\\n\")\n",
+    "        for split in tqdm(documents_):\n",
+    "            question = do_q_call(split)\n",
+    "            answer = do_a_call(question, split)\n",
+    "            \n",
+    "            # f.write(\"-------------------\\n\")\n",
+    "            # f.write(question + \"\\n\")\n",
+    "            # f. write(\"---\\n\")\n",
+    "            # f.write(answer + \"\\n\")\n",
+    "            # f.write(\"-------------------\\n\\n\")\n",
     "\n",
-    "                data = [{\"file\": file, \"question\": question, \"answer\": answer}] # list because of better pd.df \n",
-    "                df = pd.DataFrame(data)\n",
-    "                qa_df = pd.concat([qa_df, df], ignore_index=True)\n",
-    "                \n",
-    "            qa_df.to_json(\"../resources/TestFragen/\" + file)\n",
-    "            print(\"Done creating qa pairs for file \" + file + \". Written to json file.\")\n"
+    "            data = [{\"file\": file, \"question\": question, \"answer\": answer}] # list because of better pd.df \n",
+    "            df = pd.DataFrame(data)\n",
+    "            qa_df = pd.concat([qa_df, df], ignore_index=True)\n",
+    "            \n",
+    "        qa_df.to_json(\"../resources/TestFragen/\" + file[:-4] + \".json\")\n",
+    "        print(\"Written to json file.\")\n",
+    "            \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "creating q_and_a for file CELEX_02013L0036-20220101_DE_TXT.json\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  1%|          | 1/162 [00:39<1:47:16, 39.98s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done creating qa pairs for file CELEX_02013L0036-20220101_DE_TXT.json. Written to json file.\n",
-      "creating q_and_a for file CELEX_02013R0575-20230628_DE_TXT.json\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 1/746 [00:44<9:16:45, 44.84s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done creating qa pairs for file CELEX_02013R0575-20230628_DE_TXT.json. Written to json file.\n",
-      "creating q_and_a for file KWG.json\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  1%|          | 1/196 [00:54<2:57:55, 54.75s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done creating qa pairs for file KWG.json. Written to json file.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "create_qa_pairs(\"pdf_pages/\")"
+    "import random\n",
+    "\n",
+    "random.seed(42)\n",
+    "# create_qa_pairs(\"pdf_pages/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_paths = os.listdir(\"../resources/TestFragen/\")\n",
+    "\n",
+    "# only files with kwg start\n",
+    "file_paths_kwg = [file for file in file_paths if file.startswith(\"KWG\")]\n",
+    "file_paths_CELEX101 = [file for file in file_paths if file.startswith(\"CELEX_02013L0036-20220101_DE_TXT\")]\n",
+    "file_paths_CELEX628 = [file for file in file_paths if file.startswith(\"CELEX_02013R0575-20230628_DE_TXT\")]\n",
+    "\n",
+    "def read_and_append_to_one_json(file_paths: list, output_file: str):\n",
+    "    df1 = pd.DataFrame(columns=[\"file\", \"question\", \"answer\"])\n",
+    "    for file in file_paths:\n",
+    "        df = pd.read_json(\"../resources/TestFragen/\" + file)\n",
+    "        df1 = pd.concat([df1, df], ignore_index=True)\n",
+    "    df1.to_json(\"../resources/TestFragen/\" + output_file)\n",
+    "\n",
+    "for rile in file_paths_kwg:\n",
+    "    read_and_append_to_one_json(file_paths_kwg, \"KWG_final.json\")\n"
    ]
   },
   {
@@ -210,6 +180,278 @@
    "metadata": {},
    "source": [
     "## SCRIPT FINISH JUST TESTING CODE HERE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.read_json(\"../resources/TestFragen/CELEX_02013L0036-20220101_DE_TXT.json\")\n",
+    "df3 = pd.read_json(\"../resources/TestFragen/CELEX_02013R0575-20230628_DE_TXT.json\")\n",
+    "df1 = pd.read_json(\"../resources/TestFragen/KWG.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>question</th>\n",
+       "      <th>answer</th>\n",
+       "      <th>file</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>190</td>\n",
+       "      <td>190</td>\n",
+       "      <td>190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>190</td>\n",
+       "      <td>190</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>Welche Anordnungen kann die Bundesanstalt im R...</td>\n",
+       "      <td>Die Bundesanstalt kann im Rahmen ihrer gesetzl...</td>\n",
+       "      <td>KWG.json</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>190</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 question  \\\n",
+       "count                                                 190   \n",
+       "unique                                                190   \n",
+       "top     Welche Anordnungen kann die Bundesanstalt im R...   \n",
+       "freq                                                    1   \n",
+       "\n",
+       "                                                   answer      file  \n",
+       "count                                                 190       190  \n",
+       "unique                                                190         1  \n",
+       "top     Die Bundesanstalt kann im Rahmen ihrer gesetzl...  KWG.json  \n",
+       "freq                                                    1       190  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>question</th>\n",
+       "      <th>answer</th>\n",
+       "      <th>file</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>160</td>\n",
+       "      <td>160</td>\n",
+       "      <td>160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>160</td>\n",
+       "      <td>160</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>Welche Bedeutung haben die verschiedenen Änder...</td>\n",
+       "      <td>Die verschiedenen Änderungen und Berichtigunge...</td>\n",
+       "      <td>CELEX_02013L0036-20220101_DE_TXT.json</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>160</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 question  \\\n",
+       "count                                                 160   \n",
+       "unique                                                160   \n",
+       "top     Welche Bedeutung haben die verschiedenen Änder...   \n",
+       "freq                                                    1   \n",
+       "\n",
+       "                                                   answer  \\\n",
+       "count                                                 160   \n",
+       "unique                                                160   \n",
+       "top     Die verschiedenen Änderungen und Berichtigunge...   \n",
+       "freq                                                    1   \n",
+       "\n",
+       "                                         file  \n",
+       "count                                     160  \n",
+       "unique                                      1  \n",
+       "top     CELEX_02013L0036-20220101_DE_TXT.json  \n",
+       "freq                                      160  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>question</th>\n",
+       "      <th>answer</th>\n",
+       "      <th>file</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>170</td>\n",
+       "      <td>170</td>\n",
+       "      <td>170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>170</td>\n",
+       "      <td>170</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>Welche Auswirkungen haben die verschiedenen Be...</td>\n",
+       "      <td>Die verschiedenen Berichtigungen (C1-C12) habe...</td>\n",
+       "      <td>CELEX_02013R0575-20230628_DE_TXT.json</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>170</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 question  \\\n",
+       "count                                                 170   \n",
+       "unique                                                170   \n",
+       "top     Welche Auswirkungen haben die verschiedenen Be...   \n",
+       "freq                                                    1   \n",
+       "\n",
+       "                                                   answer  \\\n",
+       "count                                                 170   \n",
+       "unique                                                170   \n",
+       "top     Die verschiedenen Berichtigungen (C1-C12) habe...   \n",
+       "freq                                                    1   \n",
+       "\n",
+       "                                         file  \n",
+       "count                                     170  \n",
+       "unique                                      1  \n",
+       "top     CELEX_02013R0575-20230628_DE_TXT.json  \n",
+       "freq                                      170  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3.describe()"
    ]
   },
   {
