--- a/src/app/splits_create.ipynb
+++ b/src/app/splits_create.ipynb
@@ -91,10 +91,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "TEXT_FILES_FOLDER = \"../resources/Wissensquellen_ChatBot/text_files/\"\n",
     "SPLITS_FOLDER = \"../resources/splits/\"\n",
     "KNOWLEDGE_TEXT_FILENAMES = [file for file in os.listdir(TEXT_FILES_FOLDER)]"
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -296,32 +297,32 @@
       "Splitting CELEX_02013L0036-20220101_DE_TXT.txt\n",
       "Completed\n",
       "Persisting CELEX_02013L0036-20220101_DE_TXT.txt\n",
-      "(466, 1)\n",
+      "(532, 1)\n",
       "Completed\n",
       "Splitting CELEX_02013R0575-20230628_DE_TXT.txt\n",
       "Completed\n",
       "Persisting CELEX_02013R0575-20230628_DE_TXT.txt\n",
-      "(2006, 1)\n",
+      "(2292, 1)\n",
       "Completed\n",
       "Splitting KWG.txt\n",
       "Completed\n",
       "Persisting KWG.txt\n",
-      "(865, 1)\n",
+      "(988, 1)\n",
       "Completed\n"
      ]
     }
    ],
    "source": [
-    "splitter_folder_name = \"char_splitter_1024_o0/\"\n",
-    "char_splitter_1024_o0 = CharacterTextSplitter(\n",
+    "splitter_folder_name = \"char_splitter_1024_o128/\"\n",
+    "char_splitter_1024 = CharacterTextSplitter(\n",
     "    separator=\"\", # set to \"\" to ignore the seperator\n",
     "    chunk_size=1024, # max. len chunk uses seperator AND chunk_size\n",
-    "    chunk_overlap=124, \n",
+    "    chunk_overlap=128, \n",
     "    length_function=len, \n",
     "    is_separator_regex=False \n",
     ")\n",
     "\n",
-    "execute_char_splitter(char_splitter_1024_o0, splitter_folder_name)"
+    "execute_char_splitter(char_splitter_1024, splitter_folder_name)"
    ]
   },
   {
@@ -413,18 +414,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\timon\\AppData\\Local\\Temp\\ipykernel_19312\\2502717473.py:5: FutureWarning: Possible nested set at position 26\n",
-      "  splits = re.split(pattern, text, flags=re.MULTILINE)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "\n",
@@ -447,78 +439,187 @@
     "\n",
     "# as \"KWG.pdf\" has no 'Artikel' keywords to split, we need something else here..\n",
     "def split_kwg_file(text):\n",
-    "    splitter_folder_path = SPLITS_FOLDER + \"article_regex_splitter/\"\n",
-    "    file_path = TEXT_FILES_FOLDER + \"KWG.txt\"\n",
+    "    pattern = r'(\\n\\n)|\\(.{0,3}\\)|\\d\\.[ t]+|[a-zA-Z]\\.'\n",
+    "    splits = re.split(pattern, text, flags=re.MULTILINE)\n",
+    "    # filter out \"\"\n",
     "    \n",
-    "    return\n",
-    "write_article_splits_to_json()"
+    "    splits = [split.strip() for split in splits if split]\n",
+    "    return splits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read article splits\n",
-    "splitter_folder_path = SPLITS_FOLDER + \"article_regex_splitter/\"\n",
-    "df = pd.read_json(splitter_folder_path + \"CELEX_02013L0036-20220101_DE_TXT.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Kriterien für qualifizierte Beteiligungen  \\nBei der Prüfung, ob die Kriterien für eine qualifizierte Beteil igung im \\nSinne der Artikel 22, 25 und 26 erfüllt sind, werden die in den  Artikeln \\n9, 10 und 11 der Richtlinie 2004/109/EG genannten Stimmrechte u nd \\ndie Voraussetzungen für das Zusammenrechnen der Beteiligungen n ach \\nArtikel 12 Absätze 4 und 5 jener Richtlinie berücksichtigt.  \\nBei der Prüfung, ob die Kriterien des Artikels 26 für eine qual ifizierte \\nBeteiligung erfüllt sind, berücksichtigen die Mitgliedstaaten n icht die \\nStimmrechte oder Kapitalanteile, die Institute möglicherweise i nfolge \\nder Emission von Finanzinstrumenten oder der Platzierung von Fi nanz\\xad\\ninstrumenten mit fester Übernahmeverpflichtung im Sinne des Anh angs \\nI Abschnitt A Nummer 6 der Richtlinie 2004/39/EG halten, voraus \\xad\\ngesetzt, diese Rechte werden nicht ausgeübt oder anderweitig be nutzt, \\num in die Geschäftsführung des Emittenten einzugreifen, und inn erhalb \\neines Jahres nach dem Zeitpunkt des Erwerbs veräußert.  \\n▼M6 __________  ▼C2\\n 02013L0036 — DE — 01.01.2022 — 008.004 — 31  \\nTITEL V  \\nBESTIMMUNGEN ÜBER DIE FREIE NIEDERLASSUNG UND DEN \\nFREIEN DIENSTLEISTUNGSVERKEHR  \\nKAPITEL 1  \\nAllgemeine Grundsätze'"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['splits'][26] # zwischen Artikel 27 und 33 fehlt was?\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Example usage\n",
-    "# text = \"\"\"\n",
-    "# USELESS PRECEDING TEXT\n",
-    "# Artikel 123\n",
-    "# This is the first article.\n",
-    "# Artikel 456\n",
-    "# This is another article.\n",
-    "# More text here.\n",
-    "# Artikel 789 SHOULD NOT BE SPLIT\n",
-    "# More TEEEEEEXT\n",
-    "# Artikel 1\n",
-    "# This is the last article.\n",
-    "# END OF TEXT\n",
-    "# \"\"\"\n",
-    "\n",
-    "# result = split_text_articles(text)\n",
-    "# print(type(result))\n",
-    "# print(len(result))\n",
-    "# for split in result:\n",
-    "#     print(split)\n",
-    "#     print()"
+    "# write_article_splits_to_json()\n",
+    "import pandas as pd\n",
+    "splits = split_kwg_file(open(TEXT_FILES_FOLDER + \"KWG.txt\", 'r', encoding='utf-8').read())\n",
+    "df = pd.DataFrame(columns=['splits'], data=splits)\n",
+    "# drop all empty splits or single char\n",
+    "df = df[df['splits'] != \"\"]\n",
+    "# df.to_json(SPLITS_FOLDER + \"article_regex_splitter/KWG.json\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Artikel Unterpunkte (Nummerierung) Split"
+    "## Semantic Chunking "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.021715  , -1.2897751 , -1.74163   ,  5.462147  , -3.766225  ,\n",
+       "        1.7226999 ,  5.22165   ,  2.0056748 ,  0.7796001 , -0.62377477,\n",
+       "        0.49118   , -4.135395  ,  4.11257   ,  4.30235   , -0.82893753,\n",
+       "        1.90515   ,  2.8913503 , -0.18008   ,  3.295125  ,  2.407125  ,\n",
+       "       -1.4728218 ,  2.7237675 , -1.70109   ,  1.6210924 ,  2.41847   ,\n",
+       "        3.948175  ,  1.93553   , -4.2395496 , -1.05926   , -2.1202948 ,\n",
+       "       -0.35582495,  0.5355425 ,  0.15556999,  3.6273398 , -1.5342901 ,\n",
+       "       -6.1183505 , -0.8901249 , -4.0484047 , -0.33284998,  0.5202767 ,\n",
+       "       -0.93383896,  0.19829503, -2.322225  , -1.0749499 ,  0.745965  ,\n",
+       "        0.46227515, -2.2175999 , -3.3772252 , -3.5438    ,  1.0423499 ,\n",
+       "        1.171415  , -0.69276303,  1.5045425 , -0.77649975, -1.3162875 ,\n",
+       "        2.8850498 ,  0.8735    ,  2.6897173 ,  0.75516504,  3.3263001 ,\n",
+       "       -0.10212249, -1.0841515 ,  6.0764875 ,  1.3449945 , -1.9323499 ,\n",
+       "        0.37818748,  0.91287744, -0.39017498,  0.5541375 , -2.3390749 ,\n",
+       "       -1.6600001 ,  3.3574    , -1.3261374 ,  0.42793748,  0.13727754,\n",
+       "        3.11897   , -3.44515   , -0.274171  ,  1.699784  , -0.27293772,\n",
+       "        1.1104474 ,  1.325875  , -0.689795  , -3.1820574 , -1.23035   ,\n",
+       "       -1.24251   , -2.5075    ,  4.7326746 , -0.3373    , -1.1519248 ,\n",
+       "        0.19564   , -1.9356024 , -1.8733249 , -1.5759748 ,  0.38510004,\n",
+       "       -5.897925  , -0.14780009, -1.3171775 , -5.954617  , -2.705585  ,\n",
+       "        1.9653    , -0.04555246,  1.68795   ,  3.1892447 ,  5.2717752 ,\n",
+       "       -2.7981    ,  0.17431504, -1.259845  ,  0.9649474 , -4.49085   ,\n",
+       "       -1.5894449 ,  2.8046002 ,  6.457867  ,  3.2153752 ,  1.7365274 ,\n",
+       "        0.30827492,  0.38745   , -0.07772994,  2.4530525 ,  4.234045  ,\n",
+       "       -2.1346002 ,  0.6950752 , -1.5557151 , -2.5297747 ,  1.4959998 ,\n",
+       "        2.7135    ,  0.07635   ,  0.04369998, -4.59735   ,  0.61836004,\n",
+       "        2.5728977 ,  2.674     ,  1.930475  , -3.9467375 ,  3.5708425 ,\n",
+       "        4.177825  , -3.5284424 , -0.6447775 ,  0.3024974 ,  1.3876475 ,\n",
+       "       -0.7892475 , -0.38227504, -3.32029   ,  1.198075  ,  1.3503301 ,\n",
+       "       -0.15898748, -0.62580013,  1.6371825 ,  2.9618502 ,  0.557925  ,\n",
+       "       -5.4811497 ,  2.27281   , -2.1603649 ,  1.75316   ,  0.26640248,\n",
+       "       -1.0869025 , -0.5475249 , -0.1861    ,  3.3278148 , -0.93689007,\n",
+       "        3.754125  ,  3.9077377 ,  1.0801749 , -0.3243175 , -1.9275    ,\n",
+       "       -1.635325  ,  1.123575  , -0.19803   , -3.81665   , -2.2598176 ,\n",
+       "        1.5293976 ,  0.8907225 , -4.814375  ,  0.14539254,  1.447975  ,\n",
+       "        0.3701875 ,  0.53008246,  3.91775   ,  0.46671003, -2.088025  ,\n",
+       "       -0.34117496,  2.0023363 , -1.8745301 ,  3.1789975 ,  1.0704075 ,\n",
+       "       -0.02172518,  3.1297753 , -2.7526    , -2.81322   , -1.2387999 ,\n",
+       "        0.92739004, -3.8528502 ,  0.23817497, -0.18769997,  2.5803502 ,\n",
+       "       -0.0169    , -0.5696475 ,  3.1333702 ,  0.1685499 ,  5.040975  ,\n",
+       "        3.356835  , -0.1749225 , -3.9043999 , -0.82867247,  3.43525   ,\n",
+       "       -2.54698   , -0.6433599 ,  1.0361675 , -4.3862996 ,  0.456725  ,\n",
+       "        0.56689256,  0.46088502,  2.7066998 ,  1.3587248 ,  0.20905246,\n",
+       "        1.3537017 ,  1.73885   , -1.5511825 ,  1.34708   , -0.9089501 ,\n",
+       "        4.83355   , -4.13712   , -2.603025  , -0.92516506,  3.3481302 ,\n",
+       "        1.8835425 , -0.9383749 ,  2.62135   ,  5.029175  , -4.481275  ,\n",
+       "       -3.7524    , -3.56203   , -1.9144251 , -0.13989997, -2.248925  ,\n",
+       "       -1.2803249 , -2.22074   ,  2.6652627 , -0.699025  , -2.26335   ,\n",
+       "        2.10088   ,  0.8485625 , -2.7272925 , -0.317415  ,  2.899675  ,\n",
+       "       -5.27065   ,  3.50385   ,  1.7043226 , -3.2120252 , -1.7078352 ,\n",
+       "        2.2115    ,  0.67805004, -0.83934987,  0.6261249 , -0.74915   ,\n",
+       "        0.4991402 ,  7.6735    ,  2.2445576 , -0.3720825 ,  4.46865   ,\n",
+       "        5.4181004 , -3.8603003 , -2.0157    , -2.0033576 ,  1.335575  ,\n",
+       "        5.775475  , -2.2533872 ,  0.11847508,  0.41062498, -0.15486753,\n",
+       "        2.089875  , -0.03725505, -2.106645  , -4.4917    , -1.9893551 ,\n",
+       "       -3.94452   , -0.22608498,  0.90938   ,  2.768575  ,  4.8596    ,\n",
+       "       -3.0066748 ,  1.37982   , -4.39795   , -0.52444994, -0.4703374 ,\n",
+       "       -3.749825  ,  2.491125  ,  2.7420998 , -0.171515  , -1.4644749 ,\n",
+       "        0.31554994,  1.7992575 , -1.72296   , -4.864212  , -0.41138005,\n",
+       "       -1.9611375 ,  0.16780001,  1.7735251 ,  1.9734125 ,  4.0525    ],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "from typing import List\n",
+    "nlp = spacy.load(\"de_core_news_lg\")\n",
+    "\n",
+    "texts = [\n",
+    "    \"Das\",\n",
+    "    \"Das ist ein Test\",\n",
+    "    \"Das ist noch ein Test.\",\n",
+    "]\n",
+    "\n",
+    "text = texts[1]\n",
+    "\n",
+    "doc = nlp(text)\n",
+    "doc.vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_experimental.text_splitter import SemanticChunker\n",
+    "from langchain_openai.embeddings import OpenAIEmbeddings\n",
+    "from langchain_core.embeddings import Embeddings\n",
+    "import spacy\n",
+    "from typing import List\n",
+    "\n",
+    "nlp = spacy.load(\"de_core_news_lg\")\n",
+    "class SpacyEmbeddings(Embeddings):\n",
+    "    def __init__(self):\n",
+    "        self.nlp = nlp\n",
+    "\n",
+    "    def embed_documents(self, texts: List[str]) -> List[List[float]]:\n",
+    "        embeddings = []\n",
+    "        for text in texts:\n",
+    "            text_embeddings = [doc.vector for doc in self.nlp(text)]\n",
+    "            embeddings.extend(text_embeddings)\n",
+    "        return embeddings\n",
+    "    \n",
+    "    def embed_query(self, text: str) -> List[float]:\n",
+    "        embeddings = []\n",
+    "        for text in texts:\n",
+    "            text_embeddings = [doc.vector for doc in self.nlp(text)]\n",
+    "            embeddings.extend(text_embeddings)\n",
+    "        return embeddings\n",
+    "        \n",
+    "\n",
+    "spacy_embeddings = SpacyEmbeddings()\n",
+    "text_splitter = SemanticChunker(spacy_embeddings)\n",
+    "\n",
+    "docs_celex_101 = text_splitter.create_documents([open(TEXT_FILES_FOLDER + \"CELEX_02013L0036-20220101_DE_TXT.txt\", 'r', encoding='utf-8').read()])\n",
+    "docs_celex_628 = text_splitter.create_documents([open(TEXT_FILES_FOLDER + \"CELEX_02013R0575-20230628_DE_TXT.txt\", 'r', encoding='utf-8').read()])\n",
+    "docs_kwg = text_splitter.create_documents([open(TEXT_FILES_FOLDER + \"KWG.txt\", 'r', encoding='utf-8').read()])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "data = [doc.page_content for doc in docs_celex_101]\n",
+    "df = pd.DataFrame(columns=['splits'], data=data)\n",
+    "# df.to_json(SPLITS_FOLDER + \"semantic_splitter/CELEX_02013L0036-20220101_DE_TXT.json\")\n",
+    "\n",
+    "data = [doc.page_content for doc in docs_celex_628]\n",
+    "df = pd.DataFrame(columns=['splits'], data=data)\n",
+    "# df.to_json(SPLITS_FOLDER + \"semantic_splitter/CELEX_02013R0575-20230628_DE_TXT.json\")\n",
+    "\n",
+    "data = [doc.page_content for doc in docs_kwg]\n",
+    "df = pd.DataFrame(columns=['splits'], data=data)\n",
+    "# df.to_json(SPLITS_FOLDER + \"semantic_splitter/KWG.json\")"
    ]
   },
   {
